# quantitative_trading

./: .dockerignore  .envExample  .gitignore  Dockerfile  README.en.md  README.md  all_data_by_eq.xlsx  debug.ipynb  docker-compose.yml  freeze.yml  manage.py  note.md  pyproject.toml  requirements.in  requirements.txt  requirements2.txt
dash_web/: app.py
dash_web/pages/: allocation.py  bond.py  home.py  index.py  industry.py  metals.py  period.py  reits.py  virtual.py
dash_web/pages/bonds/: demo1.py
dash_web/pages/companys/: demo1.py
dash_web/pages/cpis/: demo1.py
dash_web/pages/indexes/: demo1.py
dash_web/pages/industrys/: demo3.py
dash_web/pages/periods/: demo1.py
dash_web/pages/virtual/: demo1.py
datas/: bond_zh_us_rate_20231208.csv  china_tax.csv  fund_aum_em.csv  hk_stock_230525_ak.xlsx  hu_shen_reits_ak_230525.xlsx  jing_hu_shen_id_name_ak.xlsx  macro_china_money_supply.csv  zhishu_ak_0525.xlsx
datas/bonds/: conv_20231220.csv  conv_20250825.csv  redemption_20231222.csv
datas/bonds/details/: 力合转债.csv
datas/cpis/: macro_australia_cpi_yearly.csv  macro_china_cpi_yearly.csv
datas/gdps/: all_gdps_data.csv  usa_gdp.csv
datas/indexes/: 000001.csv  000001_fund_portfolio_hold_em.csv  000015.csv  000016.csv  000300.csv  000905.csv  000922.csv  399001.csv  DJI.csv  HSI.csv  INX.csv  IXIC.csv  MSCI加拿大指数历史数据.csv  MSCI印度指数历史数据.csv  MSCI新加坡指数历史数据.csv  MSCI欧盟指数历史数据.csv  ^N225.csv  all_indexes_data.csv  all_indexes_data_usd.csv  hk_symbols.csv  日经225指数历史数据.csv  韩国KOSPI指数历史数据.csv
datas/processed/cpis/: all_cpi_data.csv  all_data.csv
datas/processed/gdps/: all_data.csv
datas/processed/indexes/: ak_index_global_merged_2010-09-21.csv  ak_index_global_merged_2010-09-27.csv  all_indexes_data_local_money.csv  all_indexes_data_usd2.csv
datas/processed/n_indexes/: sorted_stock_board_industry_name_em.csv
datas/processed/reits/: reits_merged.csv
datas/raw/bonds/: ak_bond_zh_cov.csv  ak_bond_zh_cov_20250829.csv  (+29 more)
datas/unemps/: all_unemps_data.csv  australia_unemps.csv  canada_unemps.csv  china_unemps.csv  euro_unemps.csv  japan_unemps.csv  usa_unemps.csv
datas/virtual/: BNB历史数据.csv  Solana历史数据.csv  XRP历史数据.csv  all_names.csv  all_virtual_data.csv  以太坊历史数据.csv  比特币历史数据.csv  泰达币历史数据.csv
demofortest/dspj/: dbc_demo2.py  demo1.py  dmc_demo.py  readme.md
demofortest/stpj/: readme.md  streamlit_app.py
demofortest/streamlit_web/: demo1.py  demo3.py
login/: forms.py  models.py  urls.py  views.py
login/templates/: login.html  register.html
quan_trad/: asgi.py  settings.py  urls.py  wsgi.py
streamlit_web/: demo2.py
templates/: base.html  footer.html  header.html  layout.html  layout2.html  layout3.html  layout_bs4.html  layout_bs5.html
update_notice/: apps.py  urls.py  views.py
update_notice/templates/: update_notice.html
user/: forms.py  models.py  urls.py  views.py
user/templates/: login.html  register.html
utils/: bond_logic.py  clean_data.py  constants.py  get_finance_data.py  logic.py  set_log.py  todo_funcs.py  update_datas.py  update_datas_stable.py  update_debug.py  update_demo.py
utils/logics/: index_logic.py  logic_p.py
web/: tests.py  urls.py  views.py
web/templates/: index.html  index2.html  index3.html  index4.html  large_plate.html  large_plate222.html
(+445 files in other folders)
