[project]
name = "quantitative-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "akracer[py-mini-racer]==0.0.13",
    "akshare==1.17.40",
    "altair==5.5.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.5",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "build==1.3.0",
    "cachetools==6.1.0",
    "ccxt>=4.5.22",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "comm==0.2.3",
    "cssselect==1.3.0",
    "curl-cffi==0.13.0",
    "dash==3.2.0",
    "dash-bootstrap-components==2.0.4",
    "dash-mantine-components==2.2.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "easyquotation==0.7.7",
    "easyutils==0.1.7",
    "efinance==0.5.5.2",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "flask==3.1.2",
    "frozendict==2.4.6",
    "frozenlist==1.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "html5lib==1.1",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonpath==0.82.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "loguru==0.7.3",
    "lxml==6.0.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "multidict==6.6.4",
    "multitasking==0.0.12",
    "narwhals==2.1.2",
    "nest-asyncio==1.6.0",
    "numpy==2.3.2",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "peewee==3.18.2",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip-tools==7.5.0",
    "pipdeptree==2.28.0",
    "platformdirs==4.3.8",
    "plotly==6.3.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py==1.11.0",
    "py-mini-racer==0.6.0",
    "pyarrow==21.0.0",
    "pycparser==2.22",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "pyquery==2.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "retry==0.9.2",
    "retrying==1.4.2",
    "rich==14.1.0",
    "rpds-py==0.27.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "streamlit==1.48.1",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "tushare==1.4.24",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "xlrd==2.0.2",
    "yarl==1.20.1",
    "yfinance==0.2.65",
    "zipp==3.23.0",
]
